--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <table class="table table-hover">
       <thead>
         <tr>
-          <th scope="col">Correct <br> Guesses</th>
-          <th scope="col">Incorrect <br> Guesses</th>
+          <th scope="col">Human <br> Victory</th>
+          <th scope="col">Computer <br> Victory</th>
           <th scope="col">Guesses <br> Remaining</th>
           <th scope="col">Letters <br> Entered</th>
         </tr>
